# conceal-lib-js

./: .gitignore  Cargo.toml  LICENSE  README.md  biome.json  check.sh  diff.txt  package-lock.json  package.json  serve.json  test-malleability.js  test-short.js  test-wasm.js  tsconfig.types.json
.cursor/rules/: 001-architecture.mdc  010-rust-engine.mdc  020-wasm-interop.mdc  030-js-api.mdc  040-testing.mdc  050-docs-and-readme.mdc  060-jsdoc.mdc  draft-commit-message.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: audit.yml  gh-deploy.yml  release.yml
crypto/: Cargo.toml
crypto/src/: lib.rs
cypher/: Cargo.toml
cypher/src/: lib.rs
js/: index.d.ts  index.js  mnemonic.js  package.json
mnemonic/: Cargo.toml
mnemonic/src/: crc32.rs  lib.rs  mnemonic.rs  wordlist.rs
rust/crypto/: Cargo.toml  build.rs
rust/crypto/src/: address.rs  base58.rs  ffi.rs  ge.rs  keccak.rs  keys.rs  lib.rs  rng.rs  scalar.rs  scan.rs  signature.rs  utils.rs
rust/cypher/: Cargo.toml
scripts/: clean-js-types.mjs  prebuild-entry.mjs  prebuild.mjs  prepare-pages.mjs  stub-node-crypto.cjs
src/: browser.d.ts  browser.js  index.d.ts  index.js
src/js/: address.d.ts  address.js  base58.d.ts  base58.js  cn.js  cnutils-wasm.browser.js  cnutils-wasm.js  cnutils-wasm.node.d.ts  cnutils-wasm.node.js  cnutils.d.ts  cnutils.js  mnemonic.d.ts  mnemonic.js  random.js  (+2 more)
test/: benchmark.js  cnutils-wasm.js  index.html  test-address.js  test-all.js  test-cn.js  test-cnutils.js  test-crypto.js  test-cypher.js  test-mnemonic.js  test-secretbox.js  test-transactions.js
(+33 files in other folders)
