[package]
name = "crypto"
version = "0.1.6"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[build-dependencies]
cc = "1"

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
tiny-keccak = { version = "2", features = ["keccak"] }
curve25519-dalek = { version = "4", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
